[gd_scene load_steps=7 format=3 uid="uid://c5tdf25yn2lx6"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_2olbb"]
[ext_resource type="Texture2D" uid="uid://j2wm6xa8544" path="res://assets/kenney_tiny-dungeon/Tiles/tile_0109.png" id="1_hkhee"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8e6fl"]
size = Vector2(16, 17)

[sub_resource type="CircleShape2D" id="CircleShape2D_73jwr"]
radius = 906.0

[sub_resource type="Animation" id="Animation_n7xr3"]
resource_name = "walk"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, -5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iarxv"]
_data = {
"walk": SubResource("Animation_n7xr3")
}

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("repulsionArea", "attackRadius") groups=["unit"]]
script = ExtResource("1_2olbb")
repulsionArea = NodePath("replusionForce")
attackRadius = NodePath("attackRadius")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_hkhee")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_8e6fl")

[node name="attackRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackRadius"]
shape = SubResource("CircleShape2D_73jwr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iarxv")
}

[node name="replusionForce" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="replusionForce"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_8e6fl")

[connection signal="body_entered" from="attackRadius" to="." method="_on_attack_radius_body_entered"]
[connection signal="body_exited" from="attackRadius" to="." method="_on_attack_radius_body_exited"]
[connection signal="body_entered" from="replusionForce" to="." method="_on_replusion_force_body_entered"]
[connection signal="body_exited" from="replusionForce" to="." method="_on_replusion_force_body_exited"]
